4、修复LogFactory.get()栈溢出问题
5、增加downloadFile方法 for HttpUtil
6、扩充ZipUtil
7、增加数据库连接池
8、修复Http的form多类型问题
9、修复IoUtil.copy未flush的bug
10、Http增加文件上传

2.13.2
1、FileUtil中加入flush
2、修复FileUtil的touch方法创建父目录空指针问题
3、getClob Method
4、增加转换为大写方法
5、完善SystemUtil，并集中于system包中
6、Http模块加入gzip支持
7、解决IoUtil读取文本的问题

2.14.0
1、明确分类
2、加入filter
3、修复Crontab restart不能加载配置文件的bug
4、扩充StrUtil
5、Add HTMLFilter
6、修改getLog为get
7、增加一些工具方法
8、增加BeanUtil
9、增加ConsoleLog
10、CharsetUtil调整
11、调整BloomFilter API
12、增加SettingDruidDatasource
13、修复Conver
14、对Https验证增加自定义方法
15、抽象不同类型对象的getter方法

2.15.0
1、修复SqlBuilder中 Order不支持多字段多向排序问题
2、增加ResourceUtil
3、对Conver做调整
4、对Getter增加类型
5、修改JSON部分，抽象JSON接口
6、正则工具类中增加空值判断
7、规范Close函数，删除FileUtil.close()，统一使用IoUtil.close()
8、修补JSON模块
9、规范FileUtil中的方法名，添加utf-8默认读写方法
10、StrUtil增加str方法，讲Object转为String
11、修复Setting中循环引用问题
12、修改Setting store方法
13、增加Assert类
14、增加Bean属性拷贝

2.15.1
1、对Setting parse 的null不打印日志
2、对对象克隆做了强化，修复无法反射调用父类方法的问题
3、FileUtil中某些方法返回File对象，方便操作
4、对Db中的方法做修正
5、修复FileUtil.loopFiles方法过滤条件为空时全部过滤问题
6、增加startWith和endWith方法
2.15.2
1、IoUtil.copy返回值使用long，防止溢出
2、增加Console类
3、修复Http上传问题
2.15.3
1、修复Http编码问题
2、StrUtil增加containsIgnoreCase方法
3、修复Entity的限制字段bug
4、修复使用HttpResponse读取二进制流转码问题
5、Http模块的Post方法使用默认的Content-Type
6、Http模块设置字符编码无效bug
7、Dict增加toEntity方法，可选参数是否转换为驼峰模式
8、修复Http Get方法的bug

2.15.4
1、Bean转Map可选是否转为下划线模式，Map转Bean可选是否转驼峰模式

2.15.5
1、优化Oracle SQL拼接，使之统一使用SqlBuilder构建SQL
2、debug方式显示SQL
3、SQL格式化功能

2.15.6
1、修复IoUtil中的空指针问题（增加了空指针的消息内容，便于排查）
2、强化JSON中的方法
3、修复HTTP访问HTTPS的错误

2.15.7
1、扩充JSONUtil
2、Conver类中的转换方法添加无默认值的方法
3、StrUtil添加addPrefixIfNot和addSuffixIfNot两个方法
4、FileUtil增加mkParentDirs方法
5、修复DateUtil的注释
6、修复Http Post问题

2.15.8
1、JSONUtil中增加创建JSON对象和JSON数组方法，方便链式构建JSON
2、FileUtil.mkParentDirs方法修正
3、FileUtil增加readJSON
4、强化FileUtil中isEmpty方法，增加isDirEmpty方法（只支持JDK7）
5、[bug fix]修复Http中GzipEOF错误导致的异常（忽略此错误）
6、强化IoUtil和HttpUtil，增加进度条
7、添加Watch模块

2.15.9
1、WatchMonitor增加overflow处理
2、升级依赖以及Maven插件
3、修复Log的FQCN问题（显示行号错误）
4、增加XML和JSON互相转换支持